--- a/backend/package.json
+++ b/backend/package.json
@@ -17,9 +17,16 @@
     "@prisma/client": "^6.5.0",
     "@types/bcrypt": "^5.0.2",
     "@types/jsonwebtoken": "^9.0.9",
+    "@types/ws": "^8.18.1",
     "bcrypt": "^5.1.1",
+    "bull": "^4.16.5",
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
-    "nodemailer": "^6.10.0"
+    "kafkajs": "^2.2.4",
+    "nodemailer": "^6.10.0",
+    "pg": "^8.14.1",
+    "reflect-metadata": "^0.2.2",
+    "typeorm": "^0.3.21",
+    "ws": "^8.18.1"
   }
 }
