--- a/package.json
+++ b/package.json
@@ -9,5 +9,10 @@
     "prisma": "^6.5.0",
     "typescript": "^5.8.2",
     "ws": "^8.18.1"
+  },
+  "scripts": {
+    "start": "node dist/index.js",
+    "dev": "ts-node src/index.ts",
+    "worker": "ts-node src/jobs/worker.ts"
   }
 }
