--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "ioredis": "^5.6.0",
     "kafkajs": "^2.2.4",
     "prisma": "^6.5.0",
+    "socket.io": "^4.8.1",
     "typescript": "^5.8.2",
     "ws": "^8.18.1"
   },
