--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "@prisma/client": "^6.5.0",
     "@types/multer": "^1.4.12",
+    "@types/nodemailer": "^6.4.17",
     "axios": "^1.8.4",
     "dotenv": "^16.4.7",
     "express-rate-limit": "^7.5.0",
